loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:7: error: ';' expected but 'if' found.
  }if (nbbisc >2) 
   ^Poucet1:9: error: ';' expected but 'else' found.
  else droite;
  ^